.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

Plone 4.0 - UNRELEASED
----------------------

- Fixed a couple of remaining undefined object_title variables in templates.
  [hannosch]

- Avoid dependency on the zope.app.zapi package.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Removed application level error message handling. This needs to be handled
  in the WSGI pipeline. This refs http://dev.plone.org/plone/ticket/8798.
  [hannosch]

- Merged time_only changeset 24257 from 3.2 branch of toLocalizedTime so that
  event_view now localizes the start/end times if the start/end dates are the 
  same.  Closes http://dev.plone.org/plone/ticket/8607
  [jnelson, calvinhp]

- merged down workaround for IE6 background caching problem, closes
  https://dev.plone.org/plone/ticket/7445, thanks cwainwright
  [calvinhp]

- Removed old background icon from personal bar for RTL scripts.
  Closes http://dev.plone.org/plone/ticket/4570
  [emanlove]

- Merged in more performance optimizations from experimental.contentcreation.
  We don't restrict the permissions for the temporary folder anymore, but
  only care about the permissions of the actual target folder.
  [hannosch]

- Removed the overly complex and convoluted `CatalogNavigationTabs` view
  and corresponding options. This use-case is better served by simple static
  viewlets or less general implementations.
  [hannosch]

- Use the new `icon_expr` for specifying icons for content types instead.
  [hannosch]

- Prefer path expressions over Python expressions for persistent expressions.
  [hannosch]

- Use the new `kupu_enabled` browser view instead to determine Kupu
  availability. Change a Python expression to a path expression for the
  is_rtl check.
  [hannosch]
